# meeting-transcription-bench

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
samples/: README.md
samples/three-speaker-sales/: transcript.json
samples/two-speaker-standup/: transcript.json
src/meetingstack_bench/: __init__.py  cli.py  config.py  diarization.py  metrics.py  output.py  runner.py  types.py
src/meetingstack_bench/adapters/: __init__.py  assemblyai.py  base.py  deepgram.py  revai.py  whisper_openai.py
tests/: conftest.py  test_adapters.py  test_diarization.py  test_metrics.py  test_output.py  test_runner.py
