[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meetingstack-bench"
version = "0.1.0"
description = "Benchmark transcription APIs against real meeting audio"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "meetingstack", email = "hello@meetingstack.io" }]
keywords = ["transcription", "benchmark", "meeting", "speech-to-text", "ASR"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "click>=8.0",
    "jiwer>=3.0",
    "httpx>=0.27",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
msb = "meetingstack_bench.cli:cli"

[project.urls]
Homepage = "https://meetingstack.io"
Repository = "https://github.com/micdarau/meeting-transcription-bench"
Issues = "https://github.com/micdarau/meeting-transcription-bench/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
